--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = speech_recognition_msgs
 	base = 2152920
-	trimbase = 63ff4a7
+	trimbase = 
 	parent = upstream
 	previous = 65741a1
