--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = speech_recognition_msgs
-	base = 989be1a
-	trimbase = 
+	base = e2ad24b
+	trimbase = 989be1a
 	parent = upstream
 	previous = d1dc8e0
