--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/multi_map_server
 	base = f5701ac
-	trimbase = 601fa86
+	trimbase = 
 	parent = upstream
 	previous = 65741a1
