--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/multi_map_server
-	base = 7239a72
-	trimbase = 
+	base = a2ca27b
+	trimbase = 7239a72
 	parent = upstream
 	previous = d1dc8e0
