--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/pr2_groovy_patches
 	base = 5a5311e
-	trimbase = 7b82018
+	trimbase = 
 	parent = upstream
 	previous = 65741a1
