--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/pr2_groovy_patches
-	base = d39ca34
-	trimbase = 
+	base = f8888e8
+	trimbase = d39ca34
 	parent = upstream
 	previous = d1dc8e0
