--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = bayesian_belief_networks
 	base = cbe7bac
-	trimbase = 482bac5
+	trimbase = 
 	parent = upstream
 	previous = 65741a1
