--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = bayesian_belief_networks
-	base = 4fa329a
-	trimbase = 
+	base = db307bb
+	trimbase = 4fa329a
 	parent = upstream
 	previous = d1dc8e0
