--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = posedetection_msgs
-	base = b768559
-	trimbase = 
+	base = 535fb96
+	trimbase = b768559
 	parent = upstream
 	previous = d1dc8e0
