--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/image_view_jsk_patch
-	base = a43a688
-	trimbase = 
+	base = a7670e1
+	trimbase = a43a688
 	parent = upstream
 	previous = d1dc8e0
