--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/nlopt
-	base = b067b42
-	trimbase = 
+	base = d460593
+	trimbase = b067b42
 	parent = upstream
 	previous = d1dc8e0
