--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_common
-	base = 3f1cb95
-	trimbase = 
+	base = 793c021
+	trimbase = 3f1cb95
 	parent = upstream
 	previous = d1dc8e0
