--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_footstep_msgs
-	base = 9b46e6e
-	trimbase = 
+	base = 32b41ea
+	trimbase = 9b46e6e
 	parent = upstream
 	previous = d1dc8e0
