--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/assimp_devel
 	base = 0dafcda
-	trimbase = 3373131
+	trimbase = 
 	parent = upstream
 	previous = 65741a1
