--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/assimp_devel
-	base = 7f4f30f
-	trimbase = 
+	base = 0070ea3
+	trimbase = 7f4f30f
 	parent = upstream
 	previous = d1dc8e0
