--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_tools
-	base = 8e3457a
-	trimbase = 
+	base = fa10080
+	trimbase = 8e3457a
 	parent = upstream
 	previous = d1dc8e0
