--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_topic_tools
-	base = 0651eef
-	trimbase = 
+	base = 72d88ac
+	trimbase = 0651eef
 	parent = upstream
 	previous = d1dc8e0
