--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/sklearn
-	base = bddb66f
-	trimbase = 
+	base = c66c62a
+	trimbase = bddb66f
 	parent = upstream
 	previous = d1dc8e0
