--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/openni_tracker_jsk_patch
 	base = fabeb9a
-	trimbase = 9b967cb
+	trimbase = 
 	parent = upstream
 	previous = 65741a1
