--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/laser_filters_jsk_patch
 	base = 1e7a6d1
-	trimbase = b50d570
+	trimbase = 
 	parent = upstream
 	previous = 65741a1
