--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stereo_synchronizer
-	base = 1e457fe
-	trimbase = 
+	base = d1d7f07
+	trimbase = 1e457fe
 	parent = upstream
 	previous = d1dc8e0
