--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/image_view2
 	base = 74aae2e
-	trimbase = c0f2d04
+	trimbase = 
 	parent = upstream
 	previous = 65741a1
