--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rospatlite
-	base = 90589f6
-	trimbase = 
+	base = d31aff5
+	trimbase = 90589f6
 	parent = upstream
 	previous = d1dc8e0
