--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rostwitter
-	base = ae835c4
-	trimbase = 
+	base = c3a042a
+	trimbase = ae835c4
 	parent = upstream
 	previous = d1dc8e0
