--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_hark_msgs
-	base = 7042d85
-	trimbase = 
+	base = 0822897
+	trimbase = 7042d85
 	parent = upstream
 	previous = d1dc8e0
