--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_coordination_system/dynamic_tf_publisher
 	base = 1e2f3fc
-	trimbase = ac50d5b
+	trimbase = 
 	parent = upstream
 	previous = 65741a1
