--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_coordination_system/dynamic_tf_publisher
-	base = 0492b88
-	trimbase = 
+	base = 70f06c2
+	trimbase = 0492b88
 	parent = upstream
 	previous = d1dc8e0
