--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/ffha
-	base = b8bea80
-	trimbase = 
+	base = b89d5be
+	trimbase = b8bea80
 	parent = upstream
 	previous = d1dc8e0
