--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rosping
-	base = 257f735
-	trimbase = 
+	base = c3ca6c3
+	trimbase = 257f735
 	parent = upstream
 	previous = d1dc8e0
