--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/libsiftfast
 	base = 3b9372d
-	trimbase = e1fe8a3
+	trimbase = 
 	parent = upstream
 	previous = 65741a1
