--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/libsiftfast
-	base = 92b34a3
-	trimbase = 
+	base = f3fcdda
+	trimbase = 92b34a3
 	parent = upstream
 	previous = d1dc8e0
