--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = opt_camera
-	base = 2628f01
-	trimbase = 
+	base = 8750ce4
+	trimbase = 2628f01
 	parent = upstream
 	previous = d1dc8e0
