--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_gui_msgs
-	base = 7f8b617
-	trimbase = 
+	base = 9da1959
+	trimbase = 7f8b617
 	parent = upstream
 	previous = d1dc8e0
