--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/downward
-	base = ea0d574
-	trimbase = 
+	base = 7981bac
+	trimbase = ea0d574
 	parent = upstream
 	previous = d1dc8e0
