--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = speech_recognition_msgs
 	base = c323b6a
-	trimbase = 60b963f
+	trimbase = 
 	parent = upstream
 	previous = d1dc8e0
