--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = speech_recognition_msgs
-	base = 16f28fd
-	trimbase = 
+	base = 3166295
+	trimbase = 16f28fd
 	parent = upstream
 	previous = 8f4ba12
