--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/multi_map_server
 	base = a49edda
-	trimbase = 3c11cd6
+	trimbase = 
 	parent = upstream
 	previous = d1dc8e0
