--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = bayesian_belief_networks
 	base = 20671af
-	trimbase = 96f6a3a
+	trimbase = 
 	parent = upstream
 	previous = d1dc8e0
