--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = bayesian_belief_networks
-	base = 6763852
-	trimbase = 
+	base = 0d6c065
+	trimbase = 6763852
 	parent = upstream
 	previous = 8f4ba12
