--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/collada_urdf_jsk_patch
-	base = d17b93e
-	trimbase = 
+	base = ccd72ae
+	trimbase = d17b93e
 	parent = upstream
 	previous = 8f4ba12
