--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = posedetection_msgs
-	base = 79c9627
-	trimbase = 
+	base = fe49d2d
+	trimbase = 79c9627
 	parent = upstream
 	previous = 8f4ba12
