--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/image_view_jsk_patch
 	base = 40e853d
-	trimbase = 7edfc42
+	trimbase = 
 	parent = upstream
 	previous = d1dc8e0
