--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/image_view_jsk_patch
-	base = 05ae58d
-	trimbase = 
+	base = d3728bf
+	trimbase = 05ae58d
 	parent = upstream
 	previous = 8f4ba12
