--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/nlopt
-	base = affe228
-	trimbase = 
+	base = 133180e
+	trimbase = affe228
 	parent = upstream
 	previous = 8f4ba12
