--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_common
-	base = 2db99c5
-	trimbase = 
+	base = c58ea90
+	trimbase = 2db99c5
 	parent = upstream
 	previous = 8f4ba12
