--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_footstep_msgs
-	base = 39357d4
-	trimbase = 
+	base = fd001f5
+	trimbase = 39357d4
 	parent = upstream
 	previous = 8f4ba12
