--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/assimp_devel
-	base = ca2aa5d
-	trimbase = 
+	base = ade31fe
+	trimbase = ca2aa5d
 	parent = upstream
 	previous = 8f4ba12
