--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_tools
-	base = 565b533
-	trimbase = 
+	base = 57892c6
+	trimbase = 565b533
 	parent = upstream
 	previous = 8f4ba12
