--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_topic_tools
-	base = 32f3b52
-	trimbase = 
+	base = e17f027
+	trimbase = 32f3b52
 	parent = upstream
 	previous = 8f4ba12
