--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/sklearn
-	base = 64a47e3
-	trimbase = 
+	base = 138dd95
+	trimbase = 64a47e3
 	parent = upstream
 	previous = 8f4ba12
