--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/openni_tracker_jsk_patch
 	base = b59ccba
-	trimbase = 1b8e468
+	trimbase = 
 	parent = upstream
 	previous = d1dc8e0
