--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/openni_tracker_jsk_patch
-	base = 0e27cbc
-	trimbase = 
+	base = 7f7846d
+	trimbase = 0e27cbc
 	parent = upstream
 	previous = 8f4ba12
