--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/laser_filters_jsk_patch
 	base = d8a7102
-	trimbase = e20f71c
+	trimbase = 
 	parent = upstream
 	previous = d1dc8e0
