--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/laser_filters_jsk_patch
-	base = bfa311b
-	trimbase = 
+	base = 5787f90
+	trimbase = bfa311b
 	parent = upstream
 	previous = 8f4ba12
