--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stereo_synchronizer
-	base = 5959e9b
-	trimbase = 
+	base = cbe1a42
+	trimbase = 5959e9b
 	parent = upstream
 	previous = 8f4ba12
