--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/ff
-	base = bab5277
-	trimbase = 
+	base = a13fae0
+	trimbase = bab5277
 	parent = upstream
 	previous = 8f4ba12
