--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/image_view2
-	base = 05f4149
-	trimbase = 
+	base = cb27dc2
+	trimbase = 05f4149
 	parent = upstream
 	previous = 8f4ba12
