--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rospatlite
-	base = f82f5e3
-	trimbase = 
+	base = 16bda3c
+	trimbase = f82f5e3
 	parent = upstream
 	previous = 8f4ba12
