--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rostwitter
-	base = 722010c
-	trimbase = 
+	base = 9da31c8
+	trimbase = 722010c
 	parent = upstream
 	previous = 8f4ba12
