--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_hark_msgs
-	base = 02d1bb5
-	trimbase = 
+	base = 4ec399b
+	trimbase = 02d1bb5
 	parent = upstream
 	previous = 8f4ba12
