--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_coordination_system/dynamic_tf_publisher
 	base = 786c8a8
-	trimbase = 5e51379
+	trimbase = 
 	parent = upstream
 	previous = d1dc8e0
