--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_coordination_system/dynamic_tf_publisher
-	base = 6974008
-	trimbase = 
+	base = 080d2d7
+	trimbase = 6974008
 	parent = upstream
 	previous = 8f4ba12
