--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/ffha
-	base = 5404519
-	trimbase = 
+	base = 8bc0d01
+	trimbase = 5404519
 	parent = upstream
 	previous = 8f4ba12
