--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rosping
-	base = 850da76
-	trimbase = 
+	base = ed19da3
+	trimbase = 850da76
 	parent = upstream
 	previous = 8f4ba12
