--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/libsiftfast
 	base = 964969b
-	trimbase = a22b130
+	trimbase = 
 	parent = upstream
 	previous = d1dc8e0
