--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/libsiftfast
-	base = f3971ee
-	trimbase = 
+	base = e5d44db
+	trimbase = f3971ee
 	parent = upstream
 	previous = 8f4ba12
