--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = opt_camera
-	base = f65d069
-	trimbase = 
+	base = a581114
+	trimbase = f65d069
 	parent = upstream
 	previous = 8f4ba12
