--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/depth_image_proc_jsk_patch
-	base = a897373
-	trimbase = 
+	base = 2082c08
+	trimbase = a897373
 	parent = upstream
 	previous = 8f4ba12
