--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_gui_msgs
-	base = 40623c6
-	trimbase = 
+	base = 9e9e8fd
+	trimbase = 40623c6
 	parent = upstream
 	previous = 8f4ba12
