--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/downward
-	base = 366bf2a
-	trimbase = 
+	base = f8a351a
+	trimbase = 366bf2a
 	parent = upstream
 	previous = 8f4ba12
