--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = speech_recognition_msgs
 	base = e2ad24b
-	trimbase = 989be1a
+	trimbase = 
 	parent = upstream
 	previous = d1dc8e0
