--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = speech_recognition_msgs
-	base = ed54483
-	trimbase = 
+	base = 2b26b81
+	trimbase = ed54483
 	parent = upstream
 	previous = 8f4ba12
