--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/multi_map_server
-	base = d27bcce
-	trimbase = 
+	base = 9936100
+	trimbase = d27bcce
 	parent = upstream
 	previous = 8f4ba12
