--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/pr2_groovy_patches
-	base = e6664d4
-	trimbase = 
+	base = f4aa3fa
+	trimbase = e6664d4
 	parent = upstream
 	previous = 8f4ba12
