--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = bayesian_belief_networks
-	base = c4f3092
-	trimbase = 
+	base = 12fc48d
+	trimbase = c4f3092
 	parent = upstream
 	previous = 8f4ba12
