--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/collada_urdf_jsk_patch
 	base = 2564ccc
-	trimbase = b0c7a15
+	trimbase = 
 	parent = upstream
 	previous = d1dc8e0
