--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/image_view_jsk_patch
-	base = e33fc23
-	trimbase = 
+	base = 240953a
+	trimbase = e33fc23
 	parent = upstream
 	previous = 8f4ba12
