--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/nlopt
-	base = b2b49a6
-	trimbase = 
+	base = bd40db4
+	trimbase = b2b49a6
 	parent = upstream
 	previous = 8f4ba12
