--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_common
-	base = 23a7562
-	trimbase = 
+	base = 0d86b9b
+	trimbase = 23a7562
 	parent = upstream
 	previous = 8f4ba12
