--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_footstep_msgs
-	base = 8fe5720
-	trimbase = 
+	base = 34e1f99
+	trimbase = 8fe5720
 	parent = upstream
 	previous = 8f4ba12
