--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/assimp_devel
-	base = a0e313f
-	trimbase = 
+	base = 628153b
+	trimbase = a0e313f
 	parent = upstream
 	previous = 8f4ba12
