--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_tools
-	base = e390cff
-	trimbase = 
+	base = a87d009
+	trimbase = e390cff
 	parent = upstream
 	previous = 8f4ba12
