--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_topic_tools
-	base = bc0c4fe
-	trimbase = 
+	base = 24465d3
+	trimbase = bc0c4fe
 	parent = upstream
 	previous = 8f4ba12
