--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/sklearn
-	base = 983ff87
-	trimbase = 
+	base = 47adfcb
+	trimbase = 983ff87
 	parent = upstream
 	previous = 8f4ba12
