--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/openni_tracker_jsk_patch
 	base = a2d6b4b
-	trimbase = 9b3ec81
+	trimbase = 
 	parent = upstream
 	previous = d1dc8e0
