--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/laser_filters_jsk_patch
 	base = 68eeade
-	trimbase = 6a5aa9c
+	trimbase = 
 	parent = upstream
 	previous = d1dc8e0
