--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stereo_synchronizer
-	base = c999301
-	trimbase = 
+	base = 952f271
+	trimbase = c999301
 	parent = upstream
 	previous = 8f4ba12
