--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/image_view2
 	base = 841184e
-	trimbase = 074d776
+	trimbase = 
 	parent = upstream
 	previous = d1dc8e0
