--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/image_view2
-	base = 6a381a1
-	trimbase = 
+	base = 7fe3f83
+	trimbase = 6a381a1
 	parent = upstream
 	previous = 8f4ba12
