--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rospatlite
-	base = 35477b0
-	trimbase = 
+	base = 00ce2e5
+	trimbase = 35477b0
 	parent = upstream
 	previous = 8f4ba12
