--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rostwitter
-	base = 043ac81
-	trimbase = 
+	base = b57f664
+	trimbase = 043ac81
 	parent = upstream
 	previous = 8f4ba12
