--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_hark_msgs
-	base = c8f46d3
-	trimbase = 
+	base = 14fe399
+	trimbase = c8f46d3
 	parent = upstream
 	previous = 8f4ba12
