--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_coordination_system/dynamic_tf_publisher
-	base = 0ba953f
-	trimbase = 
+	base = 55afdad
+	trimbase = 0ba953f
 	parent = upstream
 	previous = 8f4ba12
