--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/ffha
-	base = 15d560f
-	trimbase = 
+	base = 4cf4747
+	trimbase = 15d560f
 	parent = upstream
 	previous = 8f4ba12
