--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rosping
-	base = b6b7b9c
-	trimbase = 
+	base = 9b3b514
+	trimbase = b6b7b9c
 	parent = upstream
 	previous = 8f4ba12
