--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/libsiftfast
 	base = f3fcdda
-	trimbase = 92b34a3
+	trimbase = 
 	parent = upstream
 	previous = d1dc8e0
