--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/libsiftfast
-	base = 4fa002a
-	trimbase = 
+	base = d7aac1b
+	trimbase = 4fa002a
 	parent = upstream
 	previous = 8f4ba12
