--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = opt_camera
-	base = 440658e
-	trimbase = 
+	base = 4a7cca4
+	trimbase = 440658e
 	parent = upstream
 	previous = 8f4ba12
