--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/depth_image_proc_jsk_patch
 	base = 61165da
-	trimbase = 769768e
+	trimbase = 
 	parent = upstream
 	previous = d1dc8e0
