--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/depth_image_proc_jsk_patch
-	base = f9a447a
-	trimbase = 
+	base = c6eff86
+	trimbase = f9a447a
 	parent = upstream
 	previous = 8f4ba12
