--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_gui_msgs
-	base = 2b47835
-	trimbase = 
+	base = 4def3fc
+	trimbase = 2b47835
 	parent = upstream
 	previous = 8f4ba12
