--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/downward
-	base = 2e5c5b0
-	trimbase = 
+	base = da95467
+	trimbase = 2e5c5b0
 	parent = upstream
 	previous = 8f4ba12
