--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = speech_recognition_msgs
 	base = 3166295
-	trimbase = 16f28fd
+	trimbase = 
 	parent = upstream
 	previous = 8f4ba12
