--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = speech_recognition_msgs
-	base = b5812e0
-	trimbase = 
+	base = 0d59068
+	trimbase = b5812e0
 	parent = upstream
 	previous = 4f33b19
