--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/multi_map_server
 	base = a724d45
-	trimbase = e297e16
+	trimbase = 
 	parent = upstream
 	previous = 8f4ba12
