--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/multi_map_server
-	base = 81a71e0
-	trimbase = 
+	base = 0843b15
+	trimbase = 81a71e0
 	parent = upstream
 	previous = 4f33b19
