--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/pr2_groovy_patches
 	base = 71baf7b
-	trimbase = 046336b
+	trimbase = 
 	parent = upstream
 	previous = 8f4ba12
