--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/pr2_groovy_patches
-	base = c63bf33
-	trimbase = 
+	base = 4ca93b9
+	trimbase = c63bf33
 	parent = upstream
 	previous = 4f33b19
