--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = bayesian_belief_networks
 	base = 0d6c065
-	trimbase = 6763852
+	trimbase = 
 	parent = upstream
 	previous = 8f4ba12
