--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = bayesian_belief_networks
-	base = 9860b66
-	trimbase = 
+	base = 6e7d183
+	trimbase = 9860b66
 	parent = upstream
 	previous = 4f33b19
