--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/collada_urdf_jsk_patch
 	base = ccd72ae
-	trimbase = d17b93e
+	trimbase = 
 	parent = upstream
 	previous = 8f4ba12
