--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/collada_urdf_jsk_patch
-	base = e3ee2bd
-	trimbase = 
+	base = 302e47e
+	trimbase = e3ee2bd
 	parent = upstream
 	previous = 4f33b19
