--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/nlopt
-	base = 5140c5c
-	trimbase = 
+	base = b9aaa8e
+	trimbase = 5140c5c
 	parent = upstream
 	previous = 4f33b19
