--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_common
-	base = 6d7435c
-	trimbase = 
+	base = c539fd2
+	trimbase = 6d7435c
 	parent = upstream
 	previous = 4f33b19
