--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_footstep_msgs
-	base = 9ab7497
-	trimbase = 
+	base = 43fe909
+	trimbase = 9ab7497
 	parent = upstream
 	previous = 4f33b19
