--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/assimp_devel
 	base = ade31fe
-	trimbase = ca2aa5d
+	trimbase = 
 	parent = upstream
 	previous = 8f4ba12
