--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/assimp_devel
-	base = 848a86c
-	trimbase = 
+	base = 8a83bd8
+	trimbase = 848a86c
 	parent = upstream
 	previous = 4f33b19
