--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_tools
-	base = 046a678
-	trimbase = 
+	base = 3243550
+	trimbase = 046a678
 	parent = upstream
 	previous = 4f33b19
