--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_topic_tools
-	base = d753d96
-	trimbase = 
+	base = 8e45d27
+	trimbase = d753d96
 	parent = upstream
 	previous = 4f33b19
