--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/sklearn
-	base = 249345a
-	trimbase = 
+	base = f4e21ce
+	trimbase = 249345a
 	parent = upstream
 	previous = 4f33b19
