--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/openni_tracker_jsk_patch
-	base = edce2ef
-	trimbase = 
+	base = 9a34356
+	trimbase = edce2ef
 	parent = upstream
 	previous = 4f33b19
