--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/laser_filters_jsk_patch
-	base = cc11a8f
-	trimbase = 
+	base = 8c8ed9d
+	trimbase = cc11a8f
 	parent = upstream
 	previous = 4f33b19
