--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stereo_synchronizer
-	base = 5de7d9b
-	trimbase = 
+	base = f639b61
+	trimbase = 5de7d9b
 	parent = upstream
 	previous = 4f33b19
