--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/ff
-	base = 1b7eb3b
-	trimbase = 
+	base = d3559ed
+	trimbase = 1b7eb3b
 	parent = upstream
 	previous = 4f33b19
