--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/image_view2
-	base = 3b197d7
-	trimbase = 
+	base = b404851
+	trimbase = 3b197d7
 	parent = upstream
 	previous = 4f33b19
