--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rospatlite
-	base = d47dc22
-	trimbase = 
+	base = a5dbb43
+	trimbase = d47dc22
 	parent = upstream
 	previous = 4f33b19
