--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rostwitter
-	base = 900d887
-	trimbase = 
+	base = 066a622
+	trimbase = 900d887
 	parent = upstream
 	previous = 4f33b19
