--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_hark_msgs
-	base = 8803aaa
-	trimbase = 
+	base = f1230b0
+	trimbase = 8803aaa
 	parent = upstream
 	previous = 4f33b19
