--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_coordination_system/dynamic_tf_publisher
 	base = 080d2d7
-	trimbase = 6974008
+	trimbase = 
 	parent = upstream
 	previous = 8f4ba12
