--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_coordination_system/dynamic_tf_publisher
-	base = 6882132
-	trimbase = 
+	base = d3324a4
+	trimbase = 6882132
 	parent = upstream
 	previous = 4f33b19
