--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/ffha
-	base = 4b52b91
-	trimbase = 
+	base = 86cb881
+	trimbase = 4b52b91
 	parent = upstream
 	previous = 4f33b19
