--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/libsiftfast
 	base = e5d44db
-	trimbase = f3971ee
+	trimbase = 
 	parent = upstream
 	previous = 8f4ba12
