--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/libsiftfast
-	base = ec0119c
-	trimbase = 
+	base = a909226
+	trimbase = ec0119c
 	parent = upstream
 	previous = 4f33b19
