--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = opt_camera
-	base = ecf19af
-	trimbase = 
+	base = 9b91766
+	trimbase = ecf19af
 	parent = upstream
 	previous = 4f33b19
