--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/depth_image_proc_jsk_patch
 	base = 2082c08
-	trimbase = a897373
+	trimbase = 
 	parent = upstream
 	previous = 8f4ba12
