--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/depth_image_proc_jsk_patch
-	base = fd86793
-	trimbase = 
+	base = 7f282b5
+	trimbase = fd86793
 	parent = upstream
 	previous = 4f33b19
