--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/downward
-	base = 72d59b4
-	trimbase = 
+	base = cd4f00f
+	trimbase = 72d59b4
 	parent = upstream
 	previous = 4f33b19
