--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = speech_recognition_msgs
-	base = 44673cc
-	trimbase = 
+	base = b49562f
+	trimbase = 44673cc
 	parent = upstream
 	previous = 4f33b19
