--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/multi_map_server
-	base = 4ea56c0
-	trimbase = 
+	base = 6fb8045
+	trimbase = 4ea56c0
 	parent = upstream
 	previous = 4f33b19
