--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/pr2_groovy_patches
-	base = d7a6294
-	trimbase = 
+	base = 0ec03e6
+	trimbase = d7a6294
 	parent = upstream
 	previous = 4f33b19
