--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = bayesian_belief_networks
-	base = 96ee4c5
-	trimbase = 
+	base = bd8ee2b
+	trimbase = 96ee4c5
 	parent = upstream
 	previous = 4f33b19
