--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/collada_urdf_jsk_patch
 	base = dc10c77
-	trimbase = 1036260
+	trimbase = 
 	parent = upstream
 	previous = 8f4ba12
