--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = posedetection_msgs
-	base = e59b4c4
-	trimbase = 
+	base = 45874f3
+	trimbase = e59b4c4
 	parent = upstream
 	previous = 4f33b19
