--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/image_view_jsk_patch
 	base = 240953a
-	trimbase = e33fc23
+	trimbase = 
 	parent = upstream
 	previous = 8f4ba12
