--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/image_view_jsk_patch
-	base = 763bbb0
-	trimbase = 
+	base = 81be801
+	trimbase = 763bbb0
 	parent = upstream
 	previous = 4f33b19
