--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/nlopt
-	base = 4e43dc3
-	trimbase = 
+	base = c6ae5ed
+	trimbase = 4e43dc3
 	parent = upstream
 	previous = 4f33b19
