--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_common
-	base = 7001e5f
-	trimbase = 
+	base = b85acd5
+	trimbase = 7001e5f
 	parent = upstream
 	previous = 4f33b19
