--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_footstep_msgs
-	base = 88a13d8
-	trimbase = 
+	base = cf6064f
+	trimbase = 88a13d8
 	parent = upstream
 	previous = 4f33b19
