--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/assimp_devel
 	base = 628153b
-	trimbase = a0e313f
+	trimbase = 
 	parent = upstream
 	previous = 8f4ba12
