--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/assimp_devel
-	base = b99b4fd
-	trimbase = 
+	base = 0671668
+	trimbase = b99b4fd
 	parent = upstream
 	previous = 4f33b19
