--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_tools
-	base = 5a9820b
-	trimbase = 
+	base = 6f8f10f
+	trimbase = 5a9820b
 	parent = upstream
 	previous = 4f33b19
