--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_topic_tools
-	base = e6a646a
-	trimbase = 
+	base = fce4e21
+	trimbase = e6a646a
 	parent = upstream
 	previous = 4f33b19
