--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/sklearn
-	base = 00cbece
-	trimbase = 
+	base = 4ab1f92
+	trimbase = 00cbece
 	parent = upstream
 	previous = 4f33b19
