--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/openni_tracker_jsk_patch
 	base = e762fb4
-	trimbase = 3fcaa24
+	trimbase = 
 	parent = upstream
 	previous = 8f4ba12
