--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/laser_filters_jsk_patch
 	base = 22d97e3
-	trimbase = ea761d4
+	trimbase = 
 	parent = upstream
 	previous = 8f4ba12
