--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stereo_synchronizer
-	base = 7873285
-	trimbase = 
+	base = ee007b9
+	trimbase = 7873285
 	parent = upstream
 	previous = 4f33b19
