--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/ff
-	base = e7a5487
-	trimbase = 
+	base = 722cf1b
+	trimbase = e7a5487
 	parent = upstream
 	previous = 4f33b19
