--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/image_view2
-	base = 2e99c98
-	trimbase = 
+	base = 2325ea0
+	trimbase = 2e99c98
 	parent = upstream
 	previous = 4f33b19
