--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rospatlite
-	base = bfae981
-	trimbase = 
+	base = 2aa7333
+	trimbase = bfae981
 	parent = upstream
 	previous = 4f33b19
