--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rostwitter
-	base = 4e3d78a
-	trimbase = 
+	base = d592a7c
+	trimbase = 4e3d78a
 	parent = upstream
 	previous = 4f33b19
