--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_hark_msgs
-	base = a1ffe49
-	trimbase = 
+	base = 6da44ff
+	trimbase = a1ffe49
 	parent = upstream
 	previous = 4f33b19
