--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_coordination_system/dynamic_tf_publisher
-	base = 69c5cb8
-	trimbase = 
+	base = 108845f
+	trimbase = 69c5cb8
 	parent = upstream
 	previous = 4f33b19
