--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/ffha
-	base = 12160c8
-	trimbase = 
+	base = 73952b9
+	trimbase = 12160c8
 	parent = upstream
 	previous = 4f33b19
