--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rosping
-	base = 3427e7c
-	trimbase = 
+	base = 67f4647
+	trimbase = 3427e7c
 	parent = upstream
 	previous = 4f33b19
