--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 3rdparty/libsiftfast
-	base = 645716c
-	trimbase = 
+	base = ae28576
+	trimbase = 645716c
 	parent = upstream
 	previous = 4f33b19
