--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = opt_camera
-	base = 260be82
-	trimbase = 
+	base = eaa4fdd
+	trimbase = 260be82
 	parent = upstream
 	previous = 4f33b19
