--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_ros_patch/depth_image_proc_jsk_patch
-	base = 09d8819
-	trimbase = 
+	base = a5208de
+	trimbase = 09d8819
 	parent = upstream
 	previous = 4f33b19
