--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jsk_gui_msgs
-	base = 6859a72
-	trimbase = 
+	base = 2c614a3
+	trimbase = 6859a72
 	parent = upstream
 	previous = 4f33b19
